[gd_scene load_steps=5 format=3 uid="uid://bjxxrcwxxi54m"]

[ext_resource type="Script" uid="uid://kee165voj0s1" path="res://menu/main_menu.gd" id="1_f5okj"]
[ext_resource type="PackedScene" uid="uid://bq2mhbvft4cxx" path="res://menu/options_menu.tscn" id="2_o5w3e"]

[sub_resource type="Gradient" id="Gradient_lak45"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n4o47"]
gradient = SubResource("Gradient_lak45")

[node name="MainManu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_f5okj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_n4o47")

[node name="MainManuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -128.0
offset_right = 256.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MainManuButtons"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="MainManuButtons"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MainManuButtons"]
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_o5w3e")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
